cmake_minimum_required(VERSION 3.18)
cmake_policy(SET CMP0015 NEW)
cmake_policy(SET CMP0081 NEW)
project(daheng)

include_directories(${CMAKE_SOURCE_DIR}/include)
include_directories( /usr/include/libdrm)
# find_library(GX_LIB gxiapi HINTS ${CMAKE_SOURCE_DIR}/libs)
# find_library(DRM_LIB drm HINTS /usr/lib /usr/local/lib)
find_library(RGA_LIB rga HINTS ${CMAKE_SOURCE_DIR}/libs)
find_library(MPP_LIB rockchip_mpp HINTS /lib/aarch64-linux-gnu/)
find_library(HAILO_LIB hailort HINTS ${CMAKE_SOURCE_DIR}/libs)
find_library(DRM_LIB drm HINTS /usr/lib /usr/local/lib)
# message(STATUS "GX_LIB = ${GX_LIB}")
# message(STATUS "DRM_LIB = ${DRM_LIB}")
# message(STATUS "RGA_LIB = ${RGA_LIB}")

file(GLOB SRC_FILES "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp")
add_executable(main ${SRC_FILES})

target_link_libraries(main PUBLIC ${MPP_LIB} ${RGA_LIB} ${HAILO_LIB} ${DRM_LIB})